--- a/pagina.html
+++ b/pagina.html
@@ -9,7 +9,7 @@
         <header>
             <!--Encabezado-->
             <div class="logo">
-                <img src="logo.png" alt="Logo">
+                <img src="images/logo.png" alt="Logo">
             </div>
             <ul class="menu">
                 <li>Nuestra App</li>
@@ -63,11 +63,11 @@
                 <h1>DESCUBRE EL MUNDO DE LAS PLANTAS CON PLANTAE: EL INICIO PERFECTO PARA TU JARDÍN</h1>
                 <h2>DESCARGAR LA APP AHORA</h2>
                 <div class="imagen_app">
-                    <img src="apps.png" alt="apps">
+                    <img src="images/apps.png" alt="apps">
                 </div>
             </div>
             <div class="imagen_celular">
-                <img src="imagen_celular.png" alt="imagen celular app">
+                <img src="images/imagen_celular.png" alt="imagen celular app">
             </div>
         </div>
         <!--Primera parte del Cuerpo-->
@@ -85,7 +85,7 @@
             </p>
             <div class="container">
                 <div class="imagen_app_3d">
-                    <img src="celular_3d.png" alt="celular app 3d">
+                    <img src="images/celular_3d.png" alt="celular app 3d">
                 </div>
                 <div class="columna_cuadros">
                     <div class="cuadro_simple">
@@ -144,7 +144,7 @@
                         </p>
                     </div>
                     <div class="imagen">
-                        <img src="imagen_celular_2.png" alt="imagen">
+                        <img src="images/imagen_celular_2.png" alt="imagen">
                     </div>
                     <div id="izquierda" class="parrafo2">
                         <h4>TIENDAS Y VIVEROS <br>
@@ -191,11 +191,11 @@
               <div class="cuadro_grande">
                 <div class="union_iconos">
                   <div class="imagen_email">
-                    <img src="email_icono.png" alt="icono email">
+                    <img src="images/email_icono.png" alt="icono email">
                     <h4>plantaeapp01@gmail.com</h4> 
                   </div>
                   <div class="imagen_wsp">
-                    <img src="wsp_icono.png" alt="icono wsp">
+                    <img src="images/wsp_icono.png" alt="icono wsp">
                     <h4>+51 333 333 333</h4>
                   </div>
                 </div>
