--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Título de la página</title>
+        <title>Plantae</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
             <!--Encabezado-->
             <div class="logo">
-                <img src="images/logo.png" alt="Logo">
+                <img src="images/logo.PNG" alt="Logo">
             </div>
             <ul class="menu">
                 <li>Nuestra App</li>
