--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Título de la página</title>
+        <title>Plantae</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
