--- a/404.html
+++ b/404.html
@@ -1,3 +1,12 @@
-<p>
-    <img style="display: block; margin-left: auto; margin-right: auto;" src="images/404_error_page.jpg" alt="" width="70%" height="100%" />
-</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Plantae - Página no encontrada</title>
+</head>
+<body>
+    <p>
+        <img style="display: block; margin-left: auto; margin-right: auto;" src="images/404_error_page.jpg" alt="" width="70%" height="100%" />
+    </p>
+</body>
+</html>
