realice cambios en la tercera seccion, en el tamaño del fondo de la primera seccion y el logo que va en el encabezado

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <header>
             <!--Encabezado-->
             <div class="logo">
-                <img src="images/logo.PNG" alt="Logo">
+                <img src="imagenes/logo2.png" alt="Logo">
             </div>
             <ul class="menu">
                 <li>Nuestra App</li>
@@ -22,12 +22,7 @@
             <li class="get-app">Get to App</li>
         </header>
         <!--Fin Encabezado-->
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-
+        <br><br><br><br><br><br><br><br><br>
         <div class="cuadro_externo"></div>
         <div class="container">
             <!--Primera parte del Cuerpo-->
@@ -36,19 +31,21 @@
                 <h1>DESCUBRE EL MUNDO DE LAS PLANTAS CON PLANTAE: EL INICIO PERFECTO PARA TU JARDÍN</h1>
                 <h2>DESCARGAR LA APP AHORA</h2>
                 <div class="imagen_app">
-                    <img src="images/apps.png" alt="apps">
+                    <img src="imagenes/apps.png" alt="apps">
                 </div>
             </div>
             <div class="imagen_celular">
-                <img src="images/imagen_celular.png" alt="imagen celular app">
+                <img src="imagenes/imagen_celular.png" alt="imagen celular app">
             </div>
         </div>
         <!--Primera parte del Cuerpo-->
-        <br>
-        <br>
-        <br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
         <!--Segunda parte del Cuerpo-->
         <div class="fondo_blanco">
+            <br>
+            <br>
+            <br>
+            <br>
             <br>
             <br>
             <h2>SOBRE NUESTRA APP</h2>
@@ -58,7 +55,7 @@
             </p>
             <div class="container">
                 <div class="imagen_app_3d">
-                    <img src="images/celular_3d.png" alt="celular app 3d">
+                    <img src="imagenes/celular_3d.png" alt="celular app 3d">
                 </div>
                 <div class="columna_cuadros">
                     <div class="cuadro_simple">
@@ -81,80 +78,79 @@
                     </div>
                 </div>
             </div>
-            <br>
-            <br>
-            <br>
         </div>
         <!--Segunda parte del Cuerpo-->
-       
         <!--Tercera parte del Cuerpo-->
         <div class="fondo_verde">
             <div id="fondo" class="fondo_verde">
                 <br>
                 <br>
                 <h2>CARACTERISTICAS DE LA APP</h2>
-                <div class="parrafo_titulo">
-                    <p>Contamos con varias opciones para la identificación y cuidado de plantas</p>
-                </div>
-                <br>
-                <br>
-                <div class="parrafo1">
-                    <h4>IDENTIFICACION DE PLANTAS MEDIANTE ESCANEO</h4>
-                    <p>Con nuestro sistema de escaneo será mucho<br> 
-                        más sencillo el poder identificar plantas de <br>
-                        parques y jardines.
-                    </p>
-                </div>
-                <br>
-                <br>
-                <br>
-                <div class="parrafos_alineados1">
-                    <div id="derecha" class="parrafo2">
-                        <h4>INFORMACION SOBRE EL <br>
-                            CUIDADO DE PLANTAS</h4>
-                        <p>Podras encontrar toda la informacion util<br> 
-                            relacionada al cuidado de plantas.
+                <p class="parrafo_titulo">
+                    Contamos con varias opciones para la identificación y cuidado de plantas
+                </p>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <br>
+                    <div class="parrafo1">
+                        <h4>IDENTIFICACION DE PLANTAS MEDIANTE ESCANEO</h4>
+                        <p>Con nuestro sistema de escaneo será mucho<br> 
+                            más sencillo el poder identificar plantas de <br>
+                            parques y jardines.
                         </p>
                     </div>
-                    <div class="imagen">
-                        <img src="images/imagen_celular_2.png" alt="imagen">
+                    <br>
+                    <br>
+                    <br>
+                    <div class="parrafos_alineados1">
+                        <div id="derecha" class="parrafo2">
+                            <h4>INFORMACION SOBRE EL <br>
+                                CUIDADO DE PLANTAS</h4>
+                            <p>Podras encontrar toda la informacion util<br> 
+                                relacionada al cuidado de plantas.
+                            </p>
+                            <br><br><br><br><br><br><br><br><br><br>
+                            <div id="derecha1" class="parrafo3">
+                                <h4>RECORDATORIOS SOBRE EL <br>
+                                    REGADO</h4>
+                                <p>Liberate de preocupaciones, nosotros te<br> 
+                                    avisamos de cuando debes realizar el <br>
+                                    regado de tus plantas.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="imagen">
+                            <img src="imagenes/imagen_celular_2.png" alt="imagen">
+                        </div>
+                        <div id="izquierda" class="parrafo2">
+                            <h4>TIENDAS Y VIVEROS <br>
+                                CERCANOS A TI</h4>
+                            <p>Gracias a nuestra app podrás descubrir<br> 
+                                las tiendas y viveros que poseen en stock<br>
+                                las plantas de tu interés.
+                            </p>
+                            <br><br><br><br><br><br><br><br><br><br>
+                            <div id="izquierda1" class="parrafo3">
+                                <h4>MEJORES TEMPORADAS <br>
+                                    PARA SEMBRAR PLANTAS</h4>
+                                <p>Nuestra app te avisara sobre las mejores<br> 
+                                    epocas del año para sembrar ciertas <br>
+                                    plantas.
+                                </p>
+                            </div>
+                        </div>
                     </div>
-                    <div id="izquierda" class="parrafo2">
-                        <h4>TIENDAS Y VIVEROS <br>
-                            CERCANOS A TI</h4>
-                        <p>Gracias a nuestra app podrás descubrir<br> 
-                            las tiendas y viveros que poseen en stock<br>
-                            las plantas de tu interés.
+                    <br><br>
+                    <div class="parrafo4">
+                        <h4>CONSEJOS DE EXPERTOS</h4>
+                        <p>Podras recibir consejos sobre el cuidado<br> 
+                            de plantas provenientes de horticultores <br>
+                            expertos en el area.
                         </p>
                     </div>
-                </div>
-                <div class="parrafos_alineados1">
-                    <div id="derecha1" class="parrafo3">
-                        <h4>RECORDATORIOS SOBRE EL <br>
-                            REGADO</h4>
-                        <p>Liberate de preocupaciones, nosotros te<br> 
-                            avisamos de cuando debes realizar el <br>
-                            regado de tus plantas.
-                        </p>
-                    </div>
-    
-                    <div id="izquierda1" class="parrafo3">
-                        <h4>MEJORES TEMPORADAS <br>
-                            PARA SEMBRAR PLANTAS</h4>
-                        <p>Nuestra app te avisara sobre las mejores<br> 
-                            epocas del año para sembrar ciertas <br>
-                            plantas.
-                        </p>
-                    </div>
-                </div>
-                <br><br>
-                <div class="parrafo4">
-                    <h4>CONSEJOS DE EXPERTOS</h4>
-                    <p>Podras recibir consejos sobre el cuidado<br> 
-                        de plantas provenientes de horticultores <br>
-                        expertos en el area.
-                    </p>
-                </div>
             </div>
         </div>
         <!--Tercera parte del Cuerpo-->
