arregle error de visibilidad de las imagenes que paso con el commit anterior y realice algunos cambios

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Plantae</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="styles.css">
@@ -10,7 +12,7 @@
         <header>
             <!--Encabezado-->
             <div class="logo">
-                <img src="imagenes/logo2.png" alt="Logo">
+                <img src="images/logo.png" alt="Logo">
             </div>
             <ul class="menu">
                 <li>Nuestra App</li>
@@ -22,7 +24,7 @@
             <li class="get-app">Get to App</li>
         </header>
         <!--Fin Encabezado-->
-        <br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br>
         <div class="cuadro_externo"></div>
         <div class="container">
             <!--Primera parte del Cuerpo-->
@@ -31,11 +33,11 @@
                 <h1>DESCUBRE EL MUNDO DE LAS PLANTAS CON PLANTAE: EL INICIO PERFECTO PARA TU JARDÍN</h1>
                 <h2>DESCARGAR LA APP AHORA</h2>
                 <div class="imagen_app">
-                    <img src="imagenes/apps.png" alt="apps">
+                    <img src="images/apps.png" alt="apps">
                 </div>
             </div>
             <div class="imagen_celular">
-                <img src="imagenes/imagen_celular.png" alt="imagen celular app">
+                <img src="images/imagen_celular.png" alt="imagen celular app">
             </div>
         </div>
         <!--Primera parte del Cuerpo-->
@@ -44,18 +46,15 @@
         <div class="fondo_blanco">
             <br>
             <br>
-            <br>
-            <br>
-            <br>
-            <br>
             <h2>SOBRE NUESTRA APP</h2>
             <p class="cuadro_texto">
                 Somos una app que ayuda tanto a los nuevos iniciados en el cuidado de plantas como a los
                 ya experimentados a incrementar sus conocimientos sobre las plantas
             </p>
+            <br><br>
             <div class="container">
                 <div class="imagen_app_3d">
-                    <img src="imagenes/celular_3d.png" alt="celular app 3d">
+                    <img src="images/celular_3d.png" alt="celular app 3d">
                 </div>
                 <div class="columna_cuadros">
                     <div class="cuadro_simple">
@@ -80,6 +79,7 @@
             </div>
         </div>
         <!--Segunda parte del Cuerpo-->
+        
         <!--Tercera parte del Cuerpo-->
         <div class="fondo_verde">
             <div id="fondo" class="fondo_verde">
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                         <div class="imagen">
-                            <img src="imagenes/imagen_celular_2.png" alt="imagen">
+                            <img src="images/imagen_celular_2.png" alt="imagen">
                         </div>
                         <div id="izquierda" class="parrafo2">
                             <h4>TIENDAS Y VIVEROS <br>
@@ -158,7 +158,7 @@
         <!-- Cuarta parte del Cuerpo - Slider-->
         
         <div class="fondo_blanco">
-        <br>
+        <br><br><br>
         <h2>ECHA UN VISTAZO A LA INTERFAZ DE NUESTRA APLICACIÓN</h2>
         <p>Contamos con un diseño de interfaz intuitivo,amigable a cualquier usuario</p>
         <br>
