--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <!--Encabezado-->
             <div class="logo">
-                <img src="images/logo.png" alt="Logo">
+                <img src="images/logo2.png" alt="Logo">
             </div>
             <ul class="menu">
                 <li>Nuestra App</li>
