agregue sombra a imagen de tercera seccion y el link de las fuentes montserrat y nunito sans

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         <title>Plantae</title>
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com"> <!--Para agregar fuente montserrat y nunito sans-->
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--Para agregar fuente montserrat y nunito sans-->
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito+Sans&display=swap" rel="stylesheet"> <!--Para agregar fuente montserrat y nunito sans, en el css tendrian que hacer un cambio a sus secciones para aplicar la fuente-->
     </head>
     <body>
         <header>
@@ -123,7 +126,7 @@
                             </div>
                         </div>
                         <div class="imagen">
-                            <img src="images/imagen_celular_2.png" alt="imagen">
+                            <img src="images/imagen_celular_3.png" alt="imagen">
                         </div>
                         <div id="izquierda" class="parrafo2">
                             <h4>TIENDAS Y VIVEROS <br>
