--- a/index.html
+++ b/index.html
@@ -199,6 +199,45 @@
               </div>
             </div>
           </div>
+          <footer class="footer">
+            <div class="contenedor1">
+
+                <div class="barra1"> 
+                   <a class="logopie" >
+                    <img src="images/logo.PNG" alt="logo1">
+                    <p>Siguenos en nuestras redes sociales para estar <br>
+                        al dia con las novedades de la app.
+                    </p>
+                    <nav class="navegacion">
+                        <a href= "nosotros.html" class="navegacion__enlace">Facebook</a>
+                        <a href= "cursos.html" class="navegacion__enlace">Instagram</a>
+                        <a href= "contacto.html" class="navegacion__enlace">Youtube</a>
+                        <a href= "contacto.html" class="navegacion__enlace">Twitter</a>
+                    </nav>
+                    </a>
+                </div>
+                <div class="barra2"> 
+                    <a class="box1">
+                        <h3>QUICK LINK</h3>
+                        <nav class="Nosotros1">
+                            <a href="Nostros.html" class="Nosotros1__enlace">Sobre nuestra app</a>
+                            <a href="Caracteristicas.html" class="Caracteristicas__enlace">Caracteristicas</a>
+                            <a href="Planes.html" class="Planes__enlace">Nuestros planes</a>
+                        </nav>
+                     </a>
+                 </div>
+                 <div class="barra3"> 
+                    <a class="descargar">
+                        <h3>DESCARGA NUESTRA APP</h3>
+                        <img src="images/descargas.png" alt="descargas">
+                     </a>
+                 </div>
+           </div>
+           <div class="contenedor2">
+            <small>&copy; 2023 <b>Plantae</b> - Todos los derechos reservado</small>
+           </div>
+
+        </footer>
         <!--Pie de Pagina-->
     </body>
 </html>
