--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
                 <div class="barra1"> 
                    <a class="logopie" >
-                    <img src="images/logo.PNG" alt="logo1">
+                    <img src="images/logo2.png" alt="logo1">
                     <p>Siguenos en nuestras redes sociales para estar <br>
                         al dia con las novedades de la app.
                     </p>
