--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
                     <div class="cuadro_simple">
                         <h3 class="cuadro_titulo">MEJOR EXPERIENCIA DE USUARIO</h3>
                         <p class="cuadro_texto">
-                            Brindamos una de las mejores experiencias de usuario,buscando motivar simpre a los nuevos iniciados en las plantas a seguir su pasión sin preocupaciones
+                            Brindamos una de las mejores experiencias de usuario, buscando motivar simpre a los nuevos iniciados en las plantas a seguir su pasión sin preocupaciones
                         </p>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
             <div id="fondo" class="fondo_verde">
                 <br>
                 <br>
-                <h2>CARACTERISTICAS DE LA APP</h2>
+                <h2 class="title">CARACTERISTICAS DE LA APP</h2>
                 <p class="parrafo_titulo">
                     Contamos con varias opciones para la identificación y cuidado de plantas
                 </p>
@@ -101,6 +101,7 @@
                     <br>
                     <br>
                     <div class="parrafo1">
+                        <img src="assets/images/eye-scan.png" alt="Icono" class="imagen-icono">
                         <h4>IDENTIFICACION DE PLANTAS MEDIANTE ESCANEO</h4>
                         <p>Con nuestro sistema de escaneo será mucho<br> 
                             más sencillo el poder identificar plantas de <br>
@@ -112,6 +113,7 @@
                     <br>
                     <div class="parrafos_alineados1">
                         <div id="derecha" class="parrafo2">
+                            <img src="assets/images/plant-care.png" alt="Icono" class="imagen-icono">
                             <h4>INFORMACION SOBRE EL <br>
                                 CUIDADO DE PLANTAS</h4>
                             <p>Podras encontrar toda la informacion util<br> 
@@ -119,6 +121,7 @@
                             </p>
                             <br><br><br><br><br><br><br><br><br><br>
                             <div id="derecha1" class="parrafo3">
+                                <img src="assets/images/watered.png" alt="Icono" class="imagen-icono">
                                 <h4>RECORDATORIOS SOBRE EL <br>
                                     REGADO</h4>
                                 <p>Liberate de preocupaciones, nosotros te<br> 
@@ -131,6 +134,7 @@
                             <img src="assets/images/imagen_celular_3.png" alt="imagen">
                         </div>
                         <div id="izquierda" class="parrafo2">
+                            <img src="assets/images/greenhouse.png" alt="Icono" class="imagen-icono">
                             <h4>TIENDAS Y VIVEROS <br>
                                 CERCANOS A TI</h4>
                             <p>Gracias a nuestra app podrás descubrir<br> 
@@ -139,6 +143,7 @@
                             </p>
                             <br><br><br><br><br><br><br><br><br><br>
                             <div id="izquierda1" class="parrafo3">
+                                <img src="assets/images/sowing.png" alt="Icono" class="imagen-icono">
                                 <h4>MEJORES TEMPORADAS <br>
                                     PARA SEMBRAR PLANTAS</h4>
                                 <p>Nuestra app te avisara sobre las mejores<br> 
@@ -150,6 +155,7 @@
                     </div>
                     <br><br>
                     <div class="parrafo4">
+                        <img src="assets/images/horticulturist.png" alt="Icono" class="imagen-icono">
                         <h4>CONSEJOS DE EXPERTOS</h4>
                         <p>Podras recibir consejos sobre el cuidado<br> 
                             de plantas provenientes de horticultores <br>
@@ -165,7 +171,7 @@
         <div id="preview" class="fondo_blanco">
         <br><br><br>
         <h2>ECHA UN VISTAZO A LA INTERFAZ DE NUESTRA APLICACIÓN</h2>
-        <p>Contamos con un diseño de interfaz intuitivo,amigable a cualquier usuario</p>
+        <p>Contamos con un diseño de interfaz intuitivo, amigable a cualquier usuario</p>
         <br>
             <section id="slider" >
                 <input type="radio" name="slider" id="s1" checked>
