feat: add javascript functionality

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <body>
         <header>
             <!--Encabezado-->
+            <script src="assets/scripts/main.js"></script>
             <div id="top" class="logo">
                 <a href="http://plantae-app.com"><img src="assets/images/logo2.png" alt="Logo"></a>
             </div>
@@ -237,9 +238,7 @@
         <!-- Ultima parte del cuerpo - Descarga la app -->
         
         <div class="back-to-top">
-            <a href="#top">
-                <img src="assets/images/whiteUpArrow.png">
-            </a>
+            <img id="back-to-top-img" src="assets/images/whiteUpArrow.png">    
         </div>
 
         <!--Pie de Pagina-->
