Update index.html, styles.css and images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/styles/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"> <!--Para agregar fuente montserrat y nunito sans-->
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--Para agregar fuente montserrat y nunito sans-->
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito+Sans&display=swap" rel="stylesheet"> <!--Para agregar fuente montserrat y nunito sans, en el css tendrian que hacer un cambio a sus secciones para aplicar la fuente-->
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Nunito+Sans&display=swap" rel="stylesheet"> <!--En el css tendrian que hacer un cambio a sus secciones para aplicar la fuente-->
     </head>
     <body>
         <header>
@@ -30,7 +30,7 @@
             </li>
         </header>
         <!--Fin Encabezado-->
-        <br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div class="cuadro_externo"></div>
         <div class="container">
             <!--Primera parte del Cuerpo-->
@@ -267,10 +267,11 @@
                     <p>Siguenos en nuestras redes sociales para estar <br>
                         al dia con las novedades de la app.
                     </p>
+                    <br>
                     <nav class="navegacion">
                         <a href= "nosotros.html" class="navegacion__enlace">Facebook</a>
                         <a href= "cursos.html" class="navegacion__enlace">Instagram</a>
-                        <a href= "contacto.html" class="navegacion__enlace">Youtube</a>
+                        <a href= "https://www.youtube.com/channel/UC6_tM7CLofNF9YIjQ8z5AJw" class="navegacion__enlace">Youtube</a>
                         <a href= "contacto.html" class="navegacion__enlace">Twitter</a>
                     </nav>
                     </a>
@@ -288,7 +289,7 @@
                  <div class="barra3"> 
                     <a class="descargar">
                         <h3>DESCARGA NUESTRA APP</h3>
-                        <img src="assets/images/descargas.png" alt="descargas">
+                        <img src="assets/images/descargas2.png" alt="descargas">
                      </a>
                  </div>
            </div>
