fix: made some elements responsive

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
                 <a href="http://plantae-app.com"><img src="assets/images/logo2.png" alt="Logo"></a>
             </div>
             <ul class="menu">
-                <a href="#our-app"><li>Nuestra App</li></a>
-                <a href="#features"><li>Características</li></a>
-                <a href="#preview"><li>Interfaz</li></a>
-                <li>Contactanos</li>
-                <li>Nuestros Planes</li>
+                <a href="#our-app"><li>Nuestra App</li></a><a href="#features"><li>Características</li></a><a href="#preview"><li>Interfaz</li></a><li>Contactanos</li><li>Nuestros Planes</li>
             </ul>
             <li class="get-app">
                 <a href="#download"><button class="get-app-button">DESCARGAR</button></a>
