quick link del footer

--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@
                     <a class="box1">
                         <h3>QUICK LINK</h3>
                         <nav class="Nosotros1">
-                            <a href="Nostros.html" class="Nosotros1__enlace">Sobre nuestra app</a>
-                            <a href="Caracteristicas.html" class="Caracteristicas__enlace">Caracteristicas</a>
+                            <a href=" #our-app"><li>Sobre nuestra app</li></a>
+                            <a href="#fatures">Caracteristicas<li></li></a>
                             <a href="Planes.html" class="Planes__enlace">Nuestros planes</a>
                         </nav>
                      </a>
