--- a/index.html
+++ b/index.html
@@ -187,6 +187,65 @@
         </div>
         
         <!-- Cuarta parte del Cuerpo - Fin de Slider-->
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>replit</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <header>
+    <h1>Nuestros Planes</h1>
+  </header>
+
+  <section class="plans-container">
+    <div class="plans">
+      <div class="plan">
+        <div class="plan-box">
+          <h2>$0 / mes</h2>
+          <p>Gratuito</p>
+          <ul>
+            <li><span class="check-mark">&#10003;</span> Escaneo para identificación de plantas</li>
+            <li><span class="check-mark">&#10003;</span> Recordatorio del riego</li>
+            <li><span class="check-mark">&#10003;</span> Aviso sobre tiendas y viveros cercanos a ti</li>
+            <li><span class="check-mark">&#10003;</span> Comparación de precios de las plantas e implementos</li>
+            <li><span class="check-mark">&#10003;</span> Indicación sobre las mejores temporadas para siembra de plantas</li>
+          </ul>
+          <div class="get-app">Obtén la app</div>
+        </div>
+      </div>
+
+      <div class="plan">
+        <div class="plan-box">
+          <h2>$0.99 / mes</h2>
+          <p>Pro</p>
+          <ul>
+            <li><span class="check-mark">&#10003;</span> Todas las características del plan gratuito</li>
+            <li><span class="check-mark">&#10003;</span> Consultas con tus horticultores expertos</li>
+          </ul>
+          <div class="get-app">Obtén la app</div>
+        </div>
+      </div>
+
+      <div class="plan">
+        <div class="plan-box">
+          <h2>$3.00 / mes</h2>
+          <p>Premium</p>
+          <ul>
+            <li><span class="check-mark">&#10003;</span> Todas las características del plan gratuito</li>
+            <li><span class="check-mark">&#10003;</span> Sin anuncios</li>
+          </ul>
+          <div class="get-app">Obtén la app</div>
+        </div>
+      </div>
+    </div>
+  </section>
+</body>
+
+</html>
 
         <!-- Ultima parte del cuerpo - Descarga la app -->
         <div id="download" class="download-container">
