--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
         <div class="plan-box">
           <h2>$0 / mes</h2>
           <p>Gratuito</p>
-          <ul>
-            <li><span class="check-mark">&#10003;</span> Escaneo para identificación de plantas</li>
-            <li><span class="check-mark">&#10003;</span> Recordatorio del riego</li>
-            <li><span class="check-mark">&#10003;</span> Aviso sobre tiendas y viveros cercanos a ti</li>
-            <li><span class="check-mark">&#10003;</span> Comparación de precios de las plantas e implementos</li>
-            <li><span class="check-mark">&#10003;</span> Indicación sobre las mejores temporadas para siembra de plantas</li>
+          <ul class="checklist">
+            <li><span class="checkmark"></span> Escaneo para identificación de plantas</li>
+            <li><span class="checkmark"></span> Recordatorio del riego</li>
+            <li><span class="checkmark"></span> Aviso sobre tiendas y viveros cercanos a ti</li>
+            <li><span class="checkmark"></span> Comparación de precios de las plantas e implementos</li>
+            <li><span class="checkmark"></span> Indicación sobre las mejores temporadas para siembra de plantas</li>
           </ul>
           <div class="get-app">Obtén la app</div>
         </div>
@@ -222,10 +222,10 @@
         <div class="plan-box">
           <h2>$0.99 / mes</h2>
           <p>Pro</p>
-          <ul>
-            <li><span class="check-mark">&#10003;</span> Todas las características del plan gratuito</li>
-            <li><span class="check-mark">&#10003;</span> Consultas con tus horticultores expertos</li>
-          </ul>
+          <ul class="checklist">
+            <li><span class="checkmark"></span> Todas las características del plan gratuito</li>
+            <li><span class="checkmark"></span> Consultas con tus horticultores expertos</li>
+          </ul class="checklist">
           <div class="get-app">Obtén la app</div>
         </div>
       </div>
@@ -235,8 +235,8 @@
           <h2>$3.00 / mes</h2>
           <p>Premium</p>
           <ul>
-            <li><span class="check-mark">&#10003;</span> Todas las características del plan gratuito</li>
-            <li><span class="check-mark">&#10003;</span> Sin anuncios</li>
+            <li><span class="checkmark"></span> Todas las características del plan gratuito</li>
+            <li><span class="checkmark">&</span> Sin anuncios</li>
           </ul>
           <div class="get-app">Obtén la app</div>
         </div>
