feat: make app characteristics section web responsive and fix some errors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="http://plantae-app.com"><img src="assets/images/logo2.png" alt="Logo"></a>
             </div>
             <ul class="menu">
-                <a href="#our-app"><li>Nuestra App</li></a><a href="#features"><li>Características</li></a><a href="#preview"><li>Interfaz</li></a><li>Contactanos</li><li>Nuestros Planes</li>
+                <a href="#our-app"><li>Nuestra App</li></a><a href="#features"><li>Características</li></a><a href="#preview"><li>Interfaz</li></a><a href="#contact"><li>Contactanos</li></a><a href="#planes"><li>Nuestros Planes</li></a>
             </ul>
             <li class="get-app">
                 <a href="#download"><button class="get-app-button">DESCARGAR</button></a>
@@ -107,7 +107,7 @@
                     <br>
                     <br>
                     <br>
-                    <div class="parrafos_alineados1">
+                    <div class="parrafos_alineados">
                         <div id="derecha" class="parrafo2">
                             <img src="assets/images/plant-care.png" alt="Icono" class="imagen-icono">
                             <h4>INFORMACION SOBRE EL <br>
@@ -115,7 +115,7 @@
                             <p>Podras encontrar toda la informacion util<br> 
                                 relacionada al cuidado de plantas.
                             </p>
-                            <br><br><br><br><br><br><br><br><br><br>
+                            <br><br><br><br><br><br><br>
                             <div id="derecha1" class="parrafo3">
                                 <img src="assets/images/watered.png" alt="Icono" class="imagen-icono">
                                 <h4>RECORDATORIOS SOBRE EL <br>
@@ -126,9 +126,11 @@
                                 </p>
                             </div>
                         </div>
+                        <br><br>
                         <div class="imagen">
                             <img src="assets/images/imagen_celular_3.png" alt="imagen">
                         </div>
+                        <br><br>
                         <div id="izquierda" class="parrafo2">
                             <img src="assets/images/greenhouse.png" alt="Icono" class="imagen-icono">
                             <h4>TIENDAS Y VIVEROS <br>
@@ -137,7 +139,7 @@
                                 las tiendas y viveros que poseen en stock<br>
                                 las plantas de tu interés.
                             </p>
-                            <br><br><br><br><br><br><br><br><br><br>
+                            <br><br><br><br>
                             <div id="izquierda1" class="parrafo3">
                                 <img src="assets/images/sowing.png" alt="Icono" class="imagen-icono">
                                 <h4>MEJORES TEMPORADAS <br>
@@ -149,7 +151,7 @@
                             </div>
                         </div>
                     </div>
-                    <br><br>
+                    <br><br><br>
                     <div class="parrafo4">
                         <img src="assets/images/horticulturist.png" alt="Icono" class="imagen-icono">
                         <h4>CONSEJOS DE EXPERTOS</h4>
@@ -158,6 +160,7 @@
                             expertos en el area.
                         </p>
                     </div>
+                <br><br>
             </div>
         </div>
         <!--Tercera parte del Cuerpo-->
@@ -187,10 +190,10 @@
         
         <!-- Cuarta parte del Cuerpo - Fin de Slider-->
 
-
+<!--Quinta parte del Cuerpo - Nuestros Planes-->
   <section class="plans-container">
 
-    <div class="plans">
+    <div id="planes" class="plans">
       <div class="plan">
         <div class="plan-box">
           <h2>$0 / mes</h2>
@@ -202,7 +205,7 @@
             <li><span class="checkmark"></span> Comparación de precios de las plantas e implementos</li>
             <li><span class="checkmark"></span> Indicación sobre las mejores temporadas para siembra de plantas</li>
           </ul>
-          <div class="get-app">Obtén la app</div>
+          <div href="#download" class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
         </div>
       </div>
 
@@ -214,7 +217,7 @@
             <li><span class="checkmark"></span> Todas las características del plan gratuito</li>
             <li><span class="checkmark"></span> Consultas con tus horticultores expertos</li>
           </ul class="checklist">
-          <div class="get-app">Obtén la app</div>
+          <div href="#download" class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
         </div>
       </div>
 
@@ -222,17 +225,16 @@
         <div class="plan-box">
           <h2>$3.00 / mes</h2>
           <p>Premium</p>
-          <ul>
+          <ul class="checklist">
             <li><span class="checkmark"></span> Todas las características del plan gratuito</li>
-            <li><span class="checkmark">&</span> Sin anuncios</li>
-          </ul>
-          <div class="get-app">Obtén la app</div>
+            <li><span class="checkmark"></span> Sin anuncios</li>
+          </ul class="checklist">
+          <div class="get-app2"><a class="enlace" href="#download">Obtén la app</a></div>
         </div>
       </div>
     </div>
   </section>
-
-
+<!-- Quinta parte del Cuerpo - Fin de Nuestros Planes-->
 
         <!-- Ultima parte del cuerpo - Descarga la app -->
         <div id="download" class="download-container">
@@ -284,7 +286,7 @@
         </div>
 
         <!--Pie de Pagina-->
-        <div class="fondo_marron">
+        <div id="contact" class="fondo_marron">
             <div class="container">
               <div class="cuadro_grande">
                 <div class="union_iconos">
@@ -323,8 +325,9 @@
                         <h3>QUICK LINK</h3>
                         <nav class="Nosotros1">
                             <a href=" #our-app"><li>Sobre nuestra app</li></a>
-                            <a href="#fatures">Caracteristicas<li></li></a>
-                            <a href="Planes.html" class="Planes__enlace">Nuestros planes</a>
+                            <a href=" #features"><li>Caracteristicas</li></a>
+                            <a href=" #preview"><li>Interfaz</li></a>
+                            <a href=" #planes"><li>Nuestros planes</li></a>
                         </nav>
                      </a>
                  </div>
