Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
 
 <!--Quinta parte del Cuerpo - Nuestros Planes-->
   <section class="plans-container">
-
+    <h2>NUESTROS PLANES</h2>
+    <br>
+    <br>
     <div id="planes" class="plans">
       <div class="plan">
         <div class="plan-box">
