--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p>
-        <img style="display: block; margin-left: auto; margin-right: auto;" src="images/404_error_page.jpg" alt="" width="70%" height="100%" />
+        <img style="display: block; margin-left: auto; margin-right: auto;" src="assets/images/404_error_page.jpg" alt="" width="70%" height="100%" />
     </p>
 </body>
 </html>
