feat: update index.html and styles.css with video about the product

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                     </div>
                 </div>
             </div>
+            <iframe class="responsive-video" width="560" height="315" src="https://www.youtube.com/embed/yP6-mvdhwpw?autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
         <!--Segunda parte del Cuerpo-->
         
