--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
                 <a href="http://plantae-app.com"><img src="assets/images/logo2.png" alt="Logo app Plantae"></a>
             </div>
             <ul class="menu">
-                <a href="#our-app"><li>Nuestra App</li></a><a href="#features"><li>Características</li></a><a href="#preview"><li>Interfaz</li></a><a href="#contact"><li>Contactanos</li></a><a href="#planes"><li>Nuestros Planes</li></a>
+                <a href="#our-app"><li>Nuestra App</li></a>
+                <a href="#features"><li>Características</li></a>
+                <a href="#preview"><li>Interfaz</li></a>
+                <a href="#contact"><li>Contactanos</li></a>
+                <a href="#planes"><li>Nuestros Planes</li></a>
             </ul>
             <li class="get-app">
                 <a href="#download"><button class="get-app-button">DESCARGAR</button></a>
