--- a/index.html
+++ b/index.html
@@ -189,8 +189,7 @@
         <!-- Cuarta parte del Cuerpo - Fin de Slider-->
 
 <!--Quinta parte del Cuerpo - Nuestros Planes-->
-          <section class="planes_voz"></section> 
-  <section class="plans-container">
+  <section id="planes_voz" class="plans-container">
     <h2>NUESTROS PLANES</h2>
     <br>
     <br>
