--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <!--Fin Encabezado-->
         <br><br><br><br>
         <div class="floating-button">
-            <button id="voiceButton">Activar reconocimiento de voz</button>
-            <textarea id="speechOutput" class="speech-text"></textarea>
-          </div>
+  <button id="voiceButton">Activar reconocimiento de voz</button>
+  <textarea id="speechOutput" class="speech-text" readonly></textarea>
+</div>
         <div class="container">
             <!--Primera parte del Cuerpo-->
             
