Update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -42,8 +42,13 @@
                 <h1>DESCUBRE EL MUNDO DE LAS PLANTAS CON PLANTAE: EL INICIO PERFECTO PARA TU JARDÍN</h1>
                 <h2>DESCARGAR LA APP AHORA</h2>
                 <div class="imagen_app">
-                    <img src="assets/images/apps.png" alt="Tiendas donde descargar la app">
+                    <a href="https://play.google.com" target="_blank"><img src="assets/images/googlePlayStore.png"  alt="Google Play Store"></a>
+                    <a href="https://www.apple.com/app-store/" target="_blank"><img src="assets/images/appleAppStore.png" alt="Apple App Store"></a>
+                    <a href="https://appgallery.huawei.com" target="_blank"><img src="assets/images/huaweiAppGallery.png" alt="Huawei App Gallery"></a>
                 </div>
+                <!-- <div class="imagen_app">
+                    <img src="assets/images/apps.png" alt="Tiendas donde descargar la app">
+                </div> -->
             </div>
             <div class="imagen_celular">
                 <img src="assets/images/imagen_celular.png" alt="Celular con app Plantae">
@@ -110,53 +115,68 @@
                     <br>
                     <br>
                     <div class="parrafo1">
-                        <img src="assets/images/eye-scan.png" alt="Icono Escaneo" class="imagen-icono">
-                        <h4>IDENTIFICACIÓN DE PLANTAS MEDIANTE ESCANEO</h4>
-                        <p>Con nuestro sistema de escaneo será mucho más sencillo el poder identificar plantas de parques y jardines.
+                        <img src="assets/images/eye-scan.png" alt="Icono" class="imagen-icono">
+                        <h4>IDENTIFICACION DE PLANTAS MEDIANTE ESCANEO</h4>
+                        <p>Con nuestro sistema de escaneo será mucho <!-- <br>  -->
+                            más sencillo el poder identificar plantas de <!-- <br>  -->
+                            parques y jardines.
                         </p>
                     </div>
                     <br>
                     <br>
                     <br>
-                    <br>
                     <div class="parrafos_alineados">
-                        <div class="parrafos_derecha">
-                            <div id="derecha" class="parrafo2">
-                                <img src="assets/images/plant-care.png" alt="Icono Cuidado de plantas" class="imagen-icono">
-                                <h4>INFORMACIÓN SOBRE EL CUIDADO DE PLANTAS</h4>
-                                <p>Podrás encontrar toda la información útil relacionada al cuidado de plantas.</p>
-                            </div>
+                        <div id="derecha" class="parrafo2">
+                            <img src="assets/images/plant-care.png" alt="Icono" class="imagen-icono">
+                            <h4>INFORMACION SOBRE EL <!-- <br> -->
+                                CUIDADO DE PLANTAS</h4>
+                            <p>Podras encontrar toda la informacion util<!-- <br>  -->
+                                relacionada al cuidado de plantas.
+                            </p>
                             <br><br><br><br><br><br><br>
                             <div id="derecha1" class="parrafo3">
-                                <img src="assets/images/watered.png" alt="Icono Regado de plantas" class="imagen-icono">
-                                <h4>RECORDATORIOS SOBRE EL REGADO</h4>
-                                <p>Liberate de preocupaciones, nosotros te avisamos de cuando debes realizar el regado de tus plantas.</p>
+                                <img src="assets/images/watered.png" alt="Icono" class="imagen-icono">
+                                <h4>RECORDATORIOS SOBRE EL <!-- <br> -->
+                                    REGADO</h4>
+                                <p>Liberate de preocupaciones, nosotros te<!-- <br> --> 
+                                    avisamos de cuando debes realizar el <!-- <br> -->
+                                    regado de tus plantas.
+                                </p>
                             </div>
                         </div>
                         <br><br>
                         <div class="imagen">
-                            <img src="assets/images/imagen_celular_3.png" alt="Celular con app Plantae">
+                            <img src="assets/images/imagen_celular_3.png" alt="imagen">
                         </div>
                         <br><br>
-                        <div class="parrafos_izquierda">
-                            <div id="izquierda" class="parrafo2">
-                                <img src="assets/images/greenhouse.png" alt="Icono Invernadero" class="imagen-icono">
-                                <h4>TIENDAS Y VIVEROS CERCANOS A TI</h4>
-                                <p>Gracias a nuestra app podrás descubrir las tiendas y viveros que poseen en stock las plantas de tu interés.</p>
-                            </div>
+                        <div id="izquierda" class="parrafo2">
+                            <img src="assets/images/greenhouse.png" alt="Icono" class="imagen-icono">
+                            <h4>TIENDAS Y VIVEROS <!-- <br> -->
+                                CERCANOS A TI</h4>
+                            <p>Gracias a nuestra app podrás descubrir<!-- <br> --> 
+                                las tiendas y viveros que poseen en stock<!-- <br -->>
+                                las plantas de tu interés.
+                            </p>
                             <br><br><br><br>
                             <div id="izquierda1" class="parrafo3">
-                                <img src="assets/images/sowing.png" alt="Icono Siembra" class="imagen-icono">
-                                <h4>MEJORES TEMPORADAS PARA SEMBRAR PLANTAS</h4>
-                                <p>Nuestra app te avisará sobre las mejores épocas del año para sembrar ciertas plantas.</p>
+                                <img src="assets/images/sowing.png" alt="Icono" class="imagen-icono">
+                                <h4>MEJORES TEMPORADAS <!-- <br> -->
+                                    PARA SEMBRAR PLANTAS</h4>
+                                <p>Nuestra app te avisara sobre las mejores<!-- <br> --> 
+                                    epocas del año para sembrar ciertas <!-- <br> -->
+                                    plantas.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <br><br><br>
                     <div class="parrafo4">
-                        <img src="assets/images/horticulturist.png" alt="Icono Horticultor" class="imagen-icono">
+                        <img src="assets/images/horticulturist.png" alt="Icono" class="imagen-icono">
                         <h4>CONSEJOS DE EXPERTOS</h4>
-                        <p>Podrás recibir consejos sobre el cuidado de plantas provenientes de horticultores expertos en el área.</p>
+                        <p>Podras recibir consejos sobre el cuidado<!-- <br> --> 
+                            de plantas provenientes de horticultores <!-- <br> -->
+                            expertos en el area.
+                        </p>
                     </div>
                 <br><br>
             </div>
